# shared-project

./: .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakeLists_TODO.txt  CMakePresets.json  CMakeSettings.json  readme.md  shared_project.md  vcpkg.json  vscode.code-workspace
docs/: Gemfile  _config.yml  index.md  notes.md  readme.md  references.md  setup.md  shared_project.md  style.md  update.md
docs/_includes/: head_custom.html  header_custom.html
docs/_sass/custom/: custom.scss
docs/references/: references.md
docs/setup/: install.md  open.md  setup.md  shared-project.md  update.md
docs/wiki/: open.md
scripts/: clean.bat  clean.command  premake.bat  premake.command  setup.bat  setup.command  terminal.command
scripts/premake/: premake.lua
scripts/setup/: clean.bat  clean.command  clean.sh  premake.bat  premake.command  setup.bat  setup.command  setup.sh  terminal.bat  update.bat  update.sh  zip.bat
scripts/utils/: zip.bat
source/console_template/: CMakeLists.txt  console_template.cpp
source/imgui_template/: imgui_template.cpp
source/test_template/: CMakeLists.txt  test_template.cpp
source/test_template/data/: resource.rc
